# scouter

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app_main.py  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
evals/: conftest.py  test_retrieval_relevancy.py  utils.py
examples/chatbot/: README.md  chatbot.py  requirements.txt
scripts/: create_light_subset.py  download_apoc.sh  eval_dev.py  run_eval.py  watch_eval.py
src/scouter/agent/: agent.py  mcp.py  tools.py
src/scouter/auth/: __init__.py  dependencies.py  exceptions.py  fastmcp.py  middleware.py  rbac.py  types.py
src/scouter/config/: __init__.py  llm.py  logging.py
src/scouter/db/: __init__.py  agent_repository.py  agent_run.py  auth.py  models.py  neo4j.py  persistence.py
src/scouter/ingestion/: api.py  service.py  tasks.py
src/scouter/llm/: agent.py  client.py  tools.py  utils.py
src/scouter/llmcore/: __init__.py  agent.py  agent_runtime.py  client.py  exceptions.py  flow.py  memory.py  messages.py  prompt.py  state.py  tools.py  types.py  utils.py
src/scouter/mcp/: __init__.py  search.py
src/scouter/search/: agent.py  mcp.py  tools.py
src/scouter/tools/: semantic_search.py
src/scouter_app/agent/: agent.py  api.py  mcp.py  service.py  tools.py
src/scouter_app/config/: llm.py
src/scouter_app/ingestion/: api.py  service.py  tasks.py
tests/: conftest.py  seed_db.py  test_auth.py  test_create_light_subset.py  test_eval.py  test_ingestion.py  test_llmcore_agent.py  test_llmcore_client.py  test_mini_eval.py
(+1 files in other folders)
