[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scouter-app"
version = "0.1.0"
description = "Project Scouter: Rapid assessment and retrieval from knowledge graph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "celery[redis]",
    "fastmcp",
    "mcp",
    "neo4j",
    "neo4j-graphrag[openai,sentence-transformers]",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "deepeval",
    "datasets",
    "requests",
    "pdfplumber",
    "pytest",
    "pytest-watcher",
    "openai",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
extend = "ruff.toml"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
